Max score saved locally. Tiles visible. New colors. Improved score area. Fix'd tiles uneven

--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+@font-face {
+  font-family: Doto;
+  src: url('./fonts/Doto/Doto-VariableFont_ROND\,wght.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url('./fonts/Roboto/Roboto-VariableFont_wdth\,wght.ttf') format('truetype');
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -9,6 +20,7 @@ body {
 }
 
 canvas {
+  font-family: "Doto";
   border: 2px solid black;
   margin: 5rem;
 }
